spacing bug

--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -10,6 +10,8 @@
 .app__aboutus-content {
   width: 100%;
   z-index: 2;
+  display: flex;
+  justify-content: space-between; 
 }
 
 .app__aboutus-content_about img,
@@ -18,8 +20,12 @@
   margin-bottom: 1rem;
 }
 
+.app__aboutus-content_history h1 {
+  margin-top: 0; 
+}
+
 .app__aboutus-content_history p {
-  margin: 2rem 1rem;
+  margin: 0 1rem; 
 }
 
 .custom__button {
@@ -36,8 +42,9 @@
 }
 
 @media screen and (max-width: 900px) {
-  .app__aboutus-content{
+  .app__aboutus-content {
     flex-direction: column;
+    align-items: center; 
   }
   .app__aboutus-content_knife {
     margin: 4rem 0;
@@ -46,7 +53,7 @@
 
 @media screen and (max-width: 650px) {
   .app__aboutus-overlay img {
-    width:80%;
+    width: 80%;
     height: 320px;
   }
 }
